# at3-group23-CryptoPredictorApp

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: Home.py
app/Pages/: Bitcoin.py  Ethereum.py  Solana.py  XRP.py
app/pages/: Bitcoin.py  Ethereum.py  Ripple.py  Solana.py  Specifications.py  XRP.py  config.toml
