[project]
name = "at3-group23-cryptopredictorapp"
version = "0.1.0"
description = "App to predict high prices for different Crypto Coins"
authors = [
    {name = "SidArora01",email = "arorasidd01@gmail.com"}
]
readme = "README.md"
requires-python = "~3.11.0"
dependencies = [
    "pandas (==2.2.2)",
    "scikit-learn (==1.5.1)",
    "jupyterlab (==4.2.3)",
    "fastapi (==0.111.0)",
    "uvicorn (==0.30.1)",
    "joblib (==1.4.2)",
    "streamlit (==1.36.0)",
    "xgboost (==2.1.0)",
    "hyperopt (==0.2.7)",
    "lightgbm (==4.4.0)",
    "lime (==0.2.0.1)",
    "wandb (==0.17.4)",
    "plotly (>=6.3.1,<7.0.0)",
    "altair (>=5.5.0,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
